[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.11.0",
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "sentence-transformers>=4.1.0",
    "transformers>=4.52.4",
    "pdfplumber>=0.10.0",
    "openpyxl>=3.1.2",
]